# attic-fan-control-pi

./: .gitignore  Cargo.toml  README.md  build.sh  env  tstat.service
contrib/: particle_code.c
contrib/attic-plot/: plotting.ipynb  temp_gather.py
src/: main.rs
