[package]
authors = ["Jason Knight <Jason@JasonKnight.us>"]
name = "pi-gpio"
version = "0.1.0"

[dependencies]
env_logger = "0.5.6"
log = "0.4.1"
rand = "0.4.2"
rppal = "0.4.0"
serde = "1.0.36"
serde_json = "1.0.13"
serde_derive = "1.0.36"
reqwest = "0.8.5"
chrono = "0.4.1"
rouille = "2.1.0"

# Needed until https://github.com/tokio-rs/tokio/pull/274 lands
[patch.crates-io]
tokio = { git = 'https://github.com/dgriffen/tokio', branch = 'patch-1' }
tokio-executor = { git = 'https://github.com/dgriffen/tokio', branch = 'patch-1' }
tokio-reactor = { git = 'https://github.com/dgriffen/tokio', branch = 'patch-1' }
