[package]
authors = ["Jason Knight <Jason@JasonKnight.us>"]
name = "pi-gpio"
version = "0.1.0"
edition = "2018"

[dependencies]
env_logger = "0.7.0"
log = "0.4.8"
rand = "0.7.2"
rppal = "0.11.3"
serde = "1.0.36"
serde_json = "1.0.41"
serde_derive = "1.0.101"
reqwest = "0.9.22"
chrono = "0.4.9"
rouille = "3.0.0"
